src/components/TaskDetails/TaskDetails.module.scss
.container {
  overflow: auto;
  width: 500px;
  display: flex;
  flex-direction: column;
  gap: 1rem;

  p {
    color: rgb(112, 112, 112);
  }
}

.buttons {
  display: flex;
  gap: 1rem;
}

.header {
  display: flex;
  gap: 1rem;
}

@media (max-width: 600px) {
  .container {
    width: 100%;
    height: 100%;
  }
}

